--- a/home/projects/projects.css
+++ b/home/projects/projects.css
@@ -7,7 +7,17 @@
   margin: auto;
 }
 
+.main-header h1 {
+  overflow: hidden;
+  height: 3.5rem;
+  margin-bottom: 0;
+}
+
+
 h2 {
+  box-sizing: content-box;
+  height: 3rem;
+  overflow: hidden;
   padding-top: 50px;
   font-size: 17px;
   max-width: 55%;
@@ -15,7 +25,7 @@ h2 {
   text-align: center;
 }
 p {
-  padding-top: 50px;
+  padding-top: 20px;
   font-size: 20px;
   max-width: 55%;
   margin: 0 auto;
