--- a/home/style.css
+++ b/home/style.css
@@ -19,6 +19,7 @@ body {
   margin: 0;
   background: var(--white);
   padding-top: 70px; 
+  font-family: "Times New Roman", Times, serif !important;
 }
 
 p {
