--- a/home/home.css
+++ b/home/home.css
@@ -44,8 +44,14 @@ section {
 
 .about-container {
   display: grid;
-  grid-template-columns: 2fr 1fr; 
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
   gap: 2rem; 
+}
+
+@media (min-width: 1150px) {
+  .about-container {
+    grid-template-columns: 2fr 1fr;
+  }
 }
 
 .about-container p {
@@ -80,6 +86,10 @@ section {
   max-width: 300px;
 }
 
+#projects {
+  max-width: 75%;
+}
+
 #projects h2 {
   text-decoration: none;
   color: inherit;
@@ -97,6 +107,42 @@ section {
   margin: 25px;
 }
 
+.projects a.btn {
+  color: var(--white);
+  background: var(--primary-color);
+  font-weight: 500;
+  border: var(--primary-color) 2px solid;
+  padding: 0.3em 0.5em;
+  display: block;
+  margin: 0 auto;
+  max-width: 200px;
+  font-size: 18px;
+}
+
+@media (max-width: 1050px) {
+  /* projects */
+  #projects {
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 900px) {
+  .main-header {
+    max-width: 55%;
+  }
+}
+  
+@media (max-width:800px) {
+  /* about */
+  #about {
+    overflow: hidden;
+    max-width: 70%;
+  }
+  .about-container p{
+    width: 100%;
+  }
+}
+
 .hover-zoom {
   transition: transform 0.5s ease-in-out;
   box-shadow: 0 5px 10px var(--secondary-shadow-color);
@@ -109,18 +155,6 @@ section {
 .hover-zoom:hover {
   transform: scale(1.05);
   box-shadow: 0 5px 15px var(--primary-shadow-color);
-}
-
-.projects a.btn {
-  color: var(--white);
-  background: var(--primary-color);
-  font-weight: 500;
-  border: var(--primary-color) 2px solid;
-  padding: 0.3em 0.5em;
-  display: block;
-  margin: 0 auto;
-  max-width: 200px;
-  font-size: 18px;
 }
 
 .projects a.btn:hover {
